// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Span checkGrammar=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkGrammar=true 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkHighlight=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkHighlight=true 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkSpaces=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span checkSpaces=true 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span className="my-classname" 1`] = `
<span
  className="uu5-bricks-span my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span className="test-classname" 1`] = `
<span
  className="uu5-bricks-span test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span content="This is Content from ContentMixin" 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</span>
`;

exports[`UU5.Bricks.Span content=12345 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</span>
`;

exports[`UU5.Bricks.Span controlled=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span controlled=true 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span default props 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span disabled=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span disabled=false 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span disabled=true 1`] = `
<span
  className="uu5-bricks-span uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Span disabled=true 3`] = `
<span
  className="uu5-bricks-span uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Span docKit examples UU5.Bricks.Span should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Span
    id="uuID02"
    key="uuID02"
    style={
      Object {
        "color": "red",
        "fontSize": "30px",
      }
    }
  >
    Lorem ipsum
  </Span>
   
  <UU5.Common.TextCorrectorContextConsumer
    key="2"
    text="dolor sit amet, consectetur"
  />
   
  <Span
    id="uuID03"
    key="uuID03"
    style={
      Object {
        "backgroundColor": "#64B5F6",
      }
    }
  >
    adipiscing elit.
  </Span>
  <UU5.Common.TextCorrectorContextConsumer
    key="5"
    text="Aliquam eu sollicitudin"
  />
   
  <Span
    id="uuID04"
    key="uuID04"
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    elit
  </Span>
  <UU5.Common.TextCorrectorContextConsumer
    key="8"
    text="."
  />
</div>
`;

exports[`UU5.Bricks.Span dynamic=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span dynamic=true 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span fullTextSearchPriority=0 1`] = `
<span
  className="uu5-bricks-span uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span hidden=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span hidden=false 3`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span hidden=true 1`] = `
<span
  className="uu5-bricks-span uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span hidden=true 3`] = `
<span
  className="uu5-bricks-span uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span id="myId" 1`] = `
<span
  className="uu5-bricks-span"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span id="test-id" 1`] = `
<span
  className="uu5-bricks-span"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span ignoreHTML=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span ignoreHTML=true 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span mainAttrs=undefined 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span name="myName" 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span nestingLevel="box" 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span nestingLevel="inline" 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span noIndex=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span noIndex=true 1`] = `
<span
  className="uu5-bricks-span uu5-noindex uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span noPrint=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span noPrint=true 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span pureRender=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span pureRender=true 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span selected=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span selected=true 1`] = `
<span
  className="uu5-bricks-span uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span style="padding:8px; borderRadius: 2px" 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Span style={"backgroundColor":"red","color":"blue"} 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Span style={"margin":8} 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Span textCorrector=false 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span textCorrector=true 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Span tooltip="My Tooltip" 1`] = `
<span
  className="uu5-bricks-span"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
